[project]
name = "flowforge-jtbd"
version = "0.1.0"
description = "flowforge-jtbd — JTBD canonical spec, lockfile, storage tables, and linter core"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flowforge",
    "flowforge-sqlalchemy",
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
]

[project.optional-dependencies]
test = [
    "pytest>=7",
    "pytest-asyncio>=0.23",
    "aiosqlite>=0.19",
]
postgres = [
    "asyncpg>=0.29",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flowforge_jtbd"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
include = ["src/flowforge_jtbd"]
reportMissingImports = "warning"
