[project]
name = "flowforge-jtbd"
version = "0.1.0"
description = "flowforge-jtbd — JTBD canonical spec, lockfile, storage tables, and linter core"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Nyimbi Odero, Datacraft", email = "nyimbi@gmail.com" }]
maintainers = [{ name = "Nyimbi Odero, Datacraft", email = "nyimbi@gmail.com" }]
keywords = ["workflow", "jtbd", "jobs-to-be-done", "lockfile", "ai", "lint"]
classifiers = [
	"Development Status :: 4 - Beta",
	"Intended Audience :: Developers",
	"Intended Audience :: Information Technology",
	"License :: OSI Approved :: Apache Software License",
	"Operating System :: OS Independent",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
	"Topic :: Software Development :: Libraries",
	"Topic :: Software Development :: Libraries :: Python Modules",
	"Topic :: System :: Distributed Computing",
	"Framework :: AsyncIO",
	"Framework :: FastAPI",
	"Framework :: Pydantic",
	"Framework :: Pydantic :: 2",
	"Typing :: Typed",
]
# pypi-metadata-stamped

readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flowforge",
    "flowforge-sqlalchemy",
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
]

[project.optional-dependencies]
test = [
    "pytest>=7",
    "pytest-asyncio>=0.23",
    "aiosqlite>=0.19",
]
postgres = [
    "asyncpg>=0.29",
]

[project.urls]
Homepage = "https://github.com/nyimbi/ums"
Documentation = "https://github.com/nyimbi/ums/tree/main/framework/docs"
Repository = "https://github.com/nyimbi/ums"
Issues = "https://github.com/nyimbi/ums/issues"
Changelog = "https://github.com/nyimbi/ums/blob/main/framework/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flowforge_jtbd"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
include = ["src/flowforge_jtbd"]
reportMissingImports = "warning"
