[project]
name = "flowforge-money"
version = "0.1.0"
description = "flowforge-money — Money type with currency, decimal arithmetic, FX conversion, and locale-aware formatting"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flowforge>=0.1.0",
    "babel>=2.14",
]

[project.optional-dependencies]
test = ["pytest>=7", "pytest-asyncio>=0.23"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flowforge_money"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
