[project]
name = "flowforge-notify-multichannel"
version = "0.0.0"
description = "flowforge-notify-multichannel — flowforge adapter (placeholder)"
requires-python = ">=3.11"
dependencies = ["flowforge"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flowforge_notify_multichannel"]
