[project]
name = "flowforge-outbox-pg"
version = "0.1.0"
description = "flowforge-outbox-pg — transactional outbox adapter with PG FOR UPDATE SKIP LOCKED drain worker"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flowforge",
]

[project.optional-dependencies]
pg = ["asyncpg>=0.29"]
test = ["pytest>=7", "pytest-asyncio>=0.23", "aiosqlite>=0.19"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flowforge_outbox_pg"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
