[project]
name = "flowforge-outbox-pg"
version = "0.4.0"
description = "flowforge-outbox-pg — transactional outbox adapter with PG FOR UPDATE SKIP LOCKED drain worker"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Nyimbi Odero, Datacraft", email = "nyimbi@gmail.com" }]
maintainers = [{ name = "Nyimbi Odero, Datacraft", email = "nyimbi@gmail.com" }]
keywords = ["workflow", "transactional-outbox", "postgresql", "asyncpg"]
classifiers = [
	"Development Status :: 4 - Beta",
	"Intended Audience :: Developers",
	"Intended Audience :: Information Technology",
	"License :: OSI Approved :: Apache Software License",
	"Operating System :: OS Independent",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
	"Topic :: Software Development :: Libraries",
	"Topic :: Software Development :: Libraries :: Python Modules",
	"Topic :: System :: Distributed Computing",
	"Framework :: AsyncIO",
	"Framework :: FastAPI",
	"Framework :: Pydantic",
	"Framework :: Pydantic :: 2",
	"Typing :: Typed",
]
# pypi-metadata-stamped

readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flowforge>=0.4.0,<0.5.0",
]

[project.optional-dependencies]
pg = ["asyncpg>=0.29"]
test = ["pytest>=7", "pytest-asyncio>=0.23", "aiosqlite>=0.19"]

[project.urls]
Homepage = "https://github.com/nyimbi/flowforge"
Documentation = "https://github.com/nyimbi/flowforge/tree/main/docs"
Repository = "https://github.com/nyimbi/flowforge"
Issues = "https://github.com/nyimbi/flowforge/issues"
Changelog = "https://github.com/nyimbi/flowforge/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flowforge_outbox_pg"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
