[project]
name = "flowforge-rbac-spicedb"
version = "0.0.0"
description = "flowforge-rbac-spicedb — flowforge adapter (placeholder)"
requires-python = ">=3.11"
dependencies = ["flowforge"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flowforge_rbac_spicedb"]
